[eme] Handle multiple calls to MediaKeySession.close()

Since the close() operation is asynchronous, there is a window where
close() can be called a second time before the session is actually
closed. Changes allow the second close() to succeed if it is called
while the first close() is being processed.

BUG=668312
TEST=new test passes

Review-Url: https://codereview.chromium.org/2545083004
Cr-Commit-Position: refs/heads/master@{#438591}

Former-commit-id: 38f66de2415c72b0e37ead48bba85d335d37fc0c